--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 <body>
-  
+
   <form>
       <div class="form-group">
         <input type="number" class="form-control" id="catzz" placeholder="Number of Cats">
       </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" id="submit">Get Cats</button>
   </form>
 
   <div class="cat-card">
