--- a/index.html
+++ b/index.html
@@ -15,18 +15,12 @@
       </div>
         <button type="submit" class="btn btn-default" id="submit">Get Cats</button>
   </form>
-
-  <div class="cat-card">
-  <div class="image-container">
-    <img src="IMAGELINK">
-  </div>
-  <div class="description-container">
-    <h3> CAT NAME </h3>
-    <p> Color: COLORRRR </p>
-    <p> Skills: SKILLLLLZ </p>
-    <p class="disabled-cat"> Toes: TOESSSS </p>
-  </div>
-</div>
+  <form>
+      <div class="form-group">
+        <button type="submit" class="btn btn-default hidden" id="disabledOnes">Get Rid Of The Disabled Ones</button>
+      </div>
+  </form>
+<div class="cats container row" id="catCollection"></div>
 
   <script type="text/javascript" src="./lib/node_modules/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="./lib/node_modules/bootstrap/dist/js/bootstrap.js"></script>
