--- a/index.html
+++ b/index.html
@@ -8,19 +8,30 @@
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
 
-  <form>
+
+    <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
         <input type="number" class="form-control" id="catzz" placeholder="Number of Cats">
       </div>
         <button type="submit" class="btn btn-default" id="submit">Get Cats</button>
-  </form>
-  <form>
+    </form>
+    <form class="navbar-form navbar-left">
       <div class="form-group">
         <button type="submit" class="btn btn-default hidden" id="disabledOnes">Get Rid Of The Disabled Ones</button>
       </div>
-  </form>
-<div class="cats container row" id="catCollection"></div>
+    </form>
+    <a class="navbar-brand" href="#">
+      <img alt="Brand" id="brand" src="./img/cat.gif">
+    </a>
+  </div>
+  </div>
+
+</nav>
+<div class="cats container" id="catCollection"></div>
 
   <script type="text/javascript" src="./lib/node_modules/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="./lib/node_modules/bootstrap/dist/js/bootstrap.js"></script>
